--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,3 @@
-params.input = "/Users/toni/code/diflow/data/*.txt"
+params.input = "$PWD/diflow/data/*.txt"
 
 docker.image = "dataintuitive/viash"
